| Bug #7219 | information_schema: errors in "columns" | ||
|---|---|---|---|
| Submitted: | 13 Dec 2004 1:36 | Modified: | 23 Dec 2004 8:32 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.3-alpha-debug | OS: | Linux (SUSE 9.2) |
| Assigned to: | Sergei Glukhov | CPU Architecture: | Any |
[13 Dec 2004 1:36]
Peter Gulutzan
[23 Dec 2004 8:32]
Sergei Glukhov
fixed in 5.0 source tree PRIVILEGES , COLUMN_TYPE columns are kept(discussed with PGulutzan)
