Bug#7219 information_schema: errors in "columns" changed field names in 'collations' table(discussed with PGulutzan)